--- a/style.css
+++ b/style.css
@@ -67,3 +67,50 @@
     width: 60px;
     height: 20px;
 }
+
+/* MY SOLUTION */
+
+/* Esercizio 1 */
+.ex-1-square {
+    transition: linear 1s;
+}
+.ex-1-square:hover {
+    background-color: red;
+}
+
+/* Esercizio 2 */
+
+
+/* Esercizio 3 */
+
+
+/* Esercizio 4 */
+
+
+/* Esercizio 5 */
+
+
+/* Esercizio 6 */
+
+
+/* Esercizio 7 */
+
+
+/* Esercizio 8 */
+
+
+/* Esercizio 9 */
+
+
+/* Esercizio 10 */
+
+
+/* Esercizio 11 */
+
+
+/* Esercizio 12 */
+
+
+/* Esercizio 13 */
+
+/* /MY SOLUTION */
