--- a/style.css
+++ b/style.css
@@ -79,7 +79,12 @@
 }
 
 /* Esercizio 2 */
-
+.ex-2-square {
+    transition: linear 1s;
+}
+.ex-2-square:active {
+    width: 100%;
+}
 
 /* Esercizio 3 */
 
