--- a/style.css
+++ b/style.css
@@ -87,7 +87,12 @@
 }
 
 /* Esercizio 3 */
-
+.ex-3-square {
+    transition: linear 1s;
+}
+.ex-3-square:hover {
+    border-radius: 50%;
+}
 
 /* Esercizio 4 */
 
