--- a/style.css
+++ b/style.css
@@ -95,7 +95,12 @@
 }
 
 /* Esercizio 4 */
-
+.ex-4-square {
+    transition: linear 1s;
+}
+.ex-4-square:hover {
+    opacity: 0;
+}
 
 /* Esercizio 5 */
 
