--- a/style.css
+++ b/style.css
@@ -146,7 +146,23 @@
 }
 
 /* Esercizio 10 */
-
+.ex-10-icon {
+    animation-name: loading;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+@keyframes loading {
+    0% {
+        transform: rotate(360deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
 
 /* Esercizio 11 */
 
