--- a/style.css
+++ b/style.css
@@ -147,12 +147,12 @@
 
 /* Esercizio 10 */
 .ex-10-icon {
-    animation-name: loading;
+    animation-name: loading_infinite;
     animation-duration: 1s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
 }
-@keyframes loading {
+@keyframes loading_infinite {
     0% {
         transform: rotate(360deg);
     }
@@ -165,7 +165,22 @@
 }
 
 /* Esercizio 11 */
-
+.ex-11-icon:hover {
+    animation-name: loading_limited;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
+@keyframes loading_limited {
+    0% {
+        transform: rotate(0deg);
+    }
+    90% {
+        transform: rotate(270deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
 
 /* Esercizio 12 */
 
